# post_components/post.route.js
@@ -16,7 +16,6 @@ router.post("/:id/comments/:comment_id/like", authenMiddleware.isAuth, postContr
 
 router.get('/getUrlUpload', authenMiddleware.isAuth ,postController.uploadLink);
 router.post('/', authenMiddleware.isAuth , postController.uploadPost);
-router.post('/uploadImage',authenMiddleware.isAuth,upload,postController.uploadImage);
 router.post('/:id/like', authenMiddleware.isAuth, postController.likePost );
 router.post('/:id/comment', authenMiddleware.isAuth , postController.commentPost);
 router.post('/:id/comments/:idcmt', authenMiddleware.isAuth , postController.replyComment);
